--- a/Assignment-Website/assets/styles/style.css
+++ b/Assignment-Website/assets/styles/style.css
@@ -1,14 +1,79 @@
 * 
     {
-        background-color: #0A0D14;
         padding: 0%;
         margin: 0%;
     }
 
-.queenimage {
-    position: flex;
+.logo img{
+    top: 3;
+    margin-left: 40px;
+    height: 45px;
+    width: 45px;
+    margin-top: 30px;
+    position: absolute;
 }
 
-.NavBarWords {
-    display: flex;
+.Home {
+    font-family: sans-serif;
+    font-size: 12px;
+    padding-left: 30%;
+    padding-top: 40px;
+    color: white;
+    position: absolute;
+}
+
+.Blogs {
+    font-family: sans-serif;
+    font-size: 12px;
+    padding-left: 40%;
+    padding-top: 40px;
+    color: white;
+    position: absolute;
+}
+
+.About {
+    font-family: sans-serif;
+    font-size: 12px;
+    padding-left: 50%;
+    padding-top: 40px;
+    color: white;
+    position: absolute;
+}
+
+.Contact {
+    font-family: sans-serif;
+    font-size: 12px;
+    padding-left: 63%;
+    padding-top: 40px;
+    color: white;
+    position: absolute;
+}
+
+.latestrelease {
+    position: absolute;
+    top: 200px;
+    font-size: 50px;
+    color: white;
+    padding-left: 150px;
+    width: 100px;
+}
+
+.listenhere {
+    position: absolute;
+    top: 440px;
+    font-size: 20px;
+    color: white;
+    margin-left: 195px;
+    background-color: orange;
+    color: black;
+    padding: 5px;
+}
+
+.queenimage img {
+    position: absolute;
+    width: 100%;
+    height: 705px;
+    left: 0px;
+    top: 0px;
+    text-align: left;
 }
