--- a/Assignment-Website/assets/styles/style.css
+++ b/Assignment-Website/assets/styles/style.css
@@ -2,6 +2,7 @@
     {
         padding: 0%;
         margin: 0%;
+        color: white;
     }
 
 .logo img{
@@ -77,3 +78,36 @@
     top: 0px;
     text-align: left;
 }
+
+.images {
+    background-color: #0a0d14;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 800px;
+}
+
+.strummingimg {
+    display: absolute;
+    padding-left: 7.5%;
+    margin: 0%;
+    width: 100%;
+    height: 100%;
+}
+
+.originalimg {
+    display: absolute;
+    padding-left: 0px;
+    margin: 0%;
+    width: 100%;
+    height: 100%;
+}
+
+.coverimg {
+    display: absolute;
+    padding-left: 0px;
+    margin: 0%;
+    width: 100%;
+    height: 100%;
+}
+
+
