--- a/Assignment-Website/assets/styles/style.css
+++ b/Assignment-Website/assets/styles/style.css
@@ -62,12 +62,11 @@
 .listenhere {
     position: absolute;
     top: 440px;
-    font-size: 20px;
-    color: white;
-    margin-left: 195px;
+    font-size: 17px;
+    margin-left: 193px;
     background-color: orange;
     color: black;
-    padding: 5px;
+    padding: 9px;
 }
 
 .queenimage img {
@@ -88,26 +87,52 @@
 
 .strummingimg {
     display: absolute;
-    padding-left: 7.5%;
-    margin: 0%;
+    margin-left: 8%;
     width: 100%;
     height: 100%;
 }
 
 .originalimg {
     display: absolute;
-    padding-left: 0px;
-    margin: 0%;
     width: 100%;
     height: 100%;
 }
 
 .coverimg {
     display: absolute;
-    padding-left: 0px;
-    margin: 0%;
+    margin-right: 0%;
     width: 100%;
     height: 100%;
 }
 
+.labels{
+    background-color: #0a0d14;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 15px;
+}
+
+.Strumming2023{
+    display: absolute;
+    margin-left: 11.5%;
+    background-color: orange;
+    color: black;
+    padding: 9px;
+}
+
+.Originalsongs {
+    display: absolute;
+    margin-left: 0%;
+    background-color: orange;
+    color: black;
+    padding: 9px;
+}
+
+.Coversongs{
+    display: absolute;
+    margin-right: 13%;
+    background-color: orange;
+    color: black;
+    padding: 9px;
+}
 
