--- a/Assignment-Website/assets/styles/style.css
+++ b/Assignment-Website/assets/styles/style.css
@@ -230,18 +230,50 @@
     display: absolute;
 }
 
-.footerone {
-    background-color: #0a0d14;
-    height: 100px;
-    width: 100%;
-}
-
-/*.footer {
-    background-color: black;
-    padding-top: 100px;
-    width: 100%;
-    height: 300px;
+.footer{
     color: white;
 }
 
+.Home1 {
+    font-family: sans-serif;
+    font-size: 12px;
+    padding-left:  40%;
+    padding-top: 300px;
+    color: white;
+    position: absolute;
+}
 
+.Blogs1 {
+    font-family: sans-serif;
+    font-size: 12px;
+    padding-left: 52%;
+    padding-top: 300px;
+    color: white;
+    position: absolute;
+}
+
+.AboutMe1 {
+    font-family: sans-serif;
+    font-size: 12px;
+    padding-left: 65%;
+    padding-top: 300px;
+    color: white;
+    position: absolute;
+}
+
+.Contact1 {
+    font-family: sans-serif;
+    font-size: 12px;
+    padding-left: 80%;
+    padding-top: 300px;
+    color: white;
+    position: absolute;
+}
+
+.footerimage img{
+    background-color: #0a0d14;
+    position: absolute;
+    width: 100%;
+    height: 500px;
+    padding-top: 100px;
+}
