links + contact page

--- a/Assignment-Website/assets/styles/style.css
+++ b/Assignment-Website/assets/styles/style.css
@@ -4,6 +4,8 @@
         margin: 0%;
     }
 
+/* homepage */ 
+
 .logo img{
     top: 3;
     margin-left: 40px;
@@ -16,16 +18,16 @@
 .Home {
     font-family: sans-serif;
     font-size: 12px;
-    padding-left: 30%;
     padding-top: 40px;
     color: white;
     position: absolute;
+    margin-left: 30%;
 }
 
 .Blogs {
     font-family: sans-serif;
     font-size: 12px;
-    padding-left: 40%;
+    margin-left: 40%;
     padding-top: 40px;
     color: white;
     position: absolute;
@@ -34,7 +36,7 @@
 .About {
     font-family: sans-serif;
     font-size: 12px;
-    padding-left: 50%;
+    margin-left: 50%;
     padding-top: 40px;
     color: white;
     position: absolute;
@@ -43,7 +45,7 @@
 .Contact {
     font-family: sans-serif;
     font-size: 12px;
-    padding-left: 63%;
+    margin-left: 63%;
     padding-top: 40px;
     color: white;
     position: absolute;
