--- a/Assignment-Website/assets/styles/aboutmestyle.css
+++ b/Assignment-Website/assets/styles/aboutmestyle.css
@@ -1,3 +1,26 @@
-.navbar {
+* {
+    padding: 0%;
+    margin: 0%;
+}
+
+.aboutme {
+    display: absolute;
+    padding-top: 200px;
     background-color: #0a0d14;
+}
+
+.MeettheArtist {
+    color: white;
+    margin-left: 550px;
+    font-size: 30px;
+}
+
+.about {
+    color: white;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 30px;
+    padding-bottom: 100px;
+    font-size: 30px;
+    text-align: justify;
 }
