--- a/Assignment-Website/assets/styles/contactstyle.css
+++ b/Assignment-Website/assets/styles/contactstyle.css
@@ -15,58 +15,55 @@
 }
 
 .Name {
-    background-color: grey;
+    margin-left: 320px;
     margin-top: 30px;
-    margin-right: 435px;
-    margin-left: 475px;
-    font-size: 12px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    margin-right: 275px;
+    input[type="text"] {
+        padding: 10px; /* Set padding for better appearance */
+        width: 930px; /* Set width as needed */
+        box-sizing: border-box; /* Include padding and border in the element's total width and height */
+    }
 }
 
 .Subject {
-    background-color: grey;
-    margin-top: 4px;
-    margin-right: 435px;
-    margin-left: 475px;
-    font-size: 12px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 320px;
+    margin-top: 30px;
+    margin-right: 275px;
+    input[type="text"] {
+        padding: 10px; /* Set padding for better appearance */
+        width: 930px; /* Set width as needed */
+        box-sizing: border-box; /* Include padding and border in the element's total width and height */
+    }
 }
 
 .Email {
-    background-color: grey;
-    margin-top: 4px;
-    margin-right: 435px;
-    margin-left: 475px;
-    font-size: 12px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 320px;
+    margin-top: 30px;
+    margin-right: 275px;
+    input[type="text"] {
+        padding: 10px; /* Set padding for better appearance */
+        width: 930px; /* Set width as needed */
+        box-sizing: border-box; /* Include padding and border in the element's total width and height */
+    }
 }
 
 .Message {
-    background-color: grey;
-    margin-top: 4px;
-    margin-right: 435px;
-    margin-left: 475px;
-    font-size: 12px;
-    padding-top: 10px;
-    padding-bottom: 200px;
-    padding-left: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 320px;
+    margin-top: 30px;
+    margin-right: 275px;
+    input[type="text"] {
+        padding: 10px; /* Set padding for better appearance */
+        width: 930px; /* Set width as needed */
+        height: 200px; 
+        box-sizing: border-box; /* Include padding and border in the element's total width and height */
+    }
 }
 
 .Submit {
     background-color: #FF8542;
-    margin-top: 10px;
-    margin-right: 680px;
-    margin-left: 729px;
+    margin-top: 30px;
+    margin-right: 690px;
+    margin-left: 720px;
     font-size: 12px;
     padding-top: 10px;
     padding-bottom: 10px;
