--- a/Assignment-Website/assets/styles/contactstyle.css
+++ b/Assignment-Website/assets/styles/contactstyle.css
@@ -60,7 +60,7 @@
 }
 
 .Submit {
-    background-color: #FF8542;
+
     margin-top: 30px;
     margin-right: 690px;
     margin-left: 720px;
@@ -69,5 +69,13 @@
     padding-bottom: 10px;
     padding-left: 10px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+button[type="submit"] {
+    padding: 10px;
+    background-color: #FF8542;
+    color: #fff;
+    cursor: pointer;
+    font-size: 20px;
 }
 
