--- a/Assignment-Website/assets/styles/contactstyle.css
+++ b/Assignment-Website/assets/styles/contactstyle.css
@@ -48,11 +48,9 @@
 }
 
 .Message {
-    margin-left: 320px;
-    margin-top: 30px;
-    margin-right: 275px;
     input[type="text"] {
-        padding: 10px; /* Set padding for better appearance */
+        padding: 1px; /* Set padding for better appearance */
+        margin: 0%;
         width: 930px; /* Set width as needed */
         height: 200px; 
         box-sizing: border-box; /* Include padding and border in the element's total width and height */
@@ -60,7 +58,6 @@
 }
 
 .Submit {
-
     margin-top: 30px;
     margin-right: 690px;
     margin-left: 720px;
