--- a/Assignment-Website/assets/styles/style.css
+++ b/Assignment-Website/assets/styles/style.css
@@ -28,7 +28,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.queenimage img {
+.queenimg img {
     position: absolute;
     width: 100%;
     height: 705px;
