--- a/Assignment-Website/assets/styles/contactstyle.css
+++ b/Assignment-Website/assets/styles/contactstyle.css
@@ -48,8 +48,11 @@
 }
 
 .Message {
+    margin-left: 320px;
+    margin-top: 30px;
+    margin-right: 275px;
     input[type="text"] {
-        padding: 1px; /* Set padding for better appearance */
+        padding: 10px; /* Set padding for better appearance */
         margin: 0%;
         width: 930px; /* Set width as needed */
         height: 200px; 
