--- a/Assignment-Website/assets/styles/style.css
+++ b/Assignment-Website/assets/styles/style.css
@@ -28,13 +28,17 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.queenimg img {
+.queenimg {
     position: absolute;
     width: 100%;
-    height: 705px;
     left: 0px;
     top: 0px;
     text-align: left;
+}
+
+.queenimg img {
+    width: 100%;
+    height: 705px;
 }
 
 .images {
