--- a/Assignment-Website/assets/styles/portfoliostyle.css
+++ b/Assignment-Website/assets/styles/portfoliostyle.css
@@ -7,6 +7,8 @@
 .backgroundimg {
     position: absolute;
     width: 100%;
+    width: 100%;
+    height: auto;
     height: 705px;
     left: 0px;
     top: 0px;
@@ -16,6 +18,7 @@
 
 .backgroundimg img{
     opacity: 50%;
+    width: 100%;
 }
 
 .portfoliotext {
@@ -32,6 +35,7 @@
     display: flex;
     justify-content: space-between;
     padding-top: 800px;
+    justify-items: center;
 }
 
 .strummingimg {
