--- a/Assignment-Website/assets/styles/commonelements.css
+++ b/Assignment-Website/assets/styles/commonelements.css
@@ -1,6 +1,8 @@
 .navbar {
-    position: flex;
+    position: absolute;
     background-color: #0a0d14;
+    width: 100%;
+    top: 1%;
 }
 
 .logo img{
