--- a/Assignment-Website/assets/styles/style.css
+++ b/Assignment-Website/assets/styles/style.css
@@ -48,9 +48,9 @@
 .images {
     background-color: #0a0d14;
     display: flex;
-    justify-content: center;
     justify-content: space-between;
-    padding-top: 800px;
+    padding-top: 50%;
+    justify-items: center;
 }
 
 .strummingimg {
@@ -78,6 +78,8 @@
     display: flex;
     padding-top: 15px;
     font-family: Arial, Helvetica, sans-serif;
+    justify-content: justify;
+    justify-items: center;
 }
 
 .Strumming2023{
@@ -115,6 +117,7 @@
     padding-bottom: 16px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 
 .AboutMe {
     background-color: #0a0d14;
