--- a/Assignment-Website/assets/styles/portfoliostyle.css
+++ b/Assignment-Website/assets/styles/portfoliostyle.css
@@ -5,6 +5,7 @@
 
 .body {
     width: 100%;
+    justify-content: center;
 }
 
 .backgroundimg {
@@ -42,21 +43,21 @@
 }
 
 .strummingimg {
-    display: absolute;
+    position: absolute;
     margin-left: 8%;
     width: 100%;
     height: 100%;
 }
 
 .coverimg {
-    display: absolute;
+    position: absolute;
     margin-right: 0%;
     width: 100%;
     height: 100%;
 }
 
 .originalimg {
-    display: absolute;
+    position: absolute;
     width: 100%;
     height: 100%;
 }
@@ -66,12 +67,12 @@
     display: flex;
     padding-top: 15px;
     font-family: Arial, Helvetica, sans-serif;
-    justify-content: justify;
+    text-align: justify;
     justify-items: center;
 }
 
 .Strumming2023{
-    display: absolute;
+    position: absolute;
     margin-left: 13%;
     background-color: #FF8542;
     padding: 9px;
@@ -82,7 +83,7 @@
 }
 
 .Coversongs{
-    display: absolute;
+    position: absolute;
     margin-right: 13%;
     margin-left: 20.5%;
     background-color: #FF8542;
@@ -95,7 +96,7 @@
 }
 
 .Originalsongs {
-    display: absolute;
+    position: absolute;
     background-color: #FF8542;
     color: black;
     margin-left: 8%;
