--- a/Assignment-Website/assets/styles/style.css
+++ b/Assignment-Website/assets/styles/style.css
@@ -8,6 +8,7 @@
 
 .body {
     width: 100% ;
+    justify-content: center;
 }
 
 .latestrelease {
@@ -48,28 +49,28 @@
 
 .images {
     background-color: #0a0d14;
-    display: flex;
+    position: flex;
     justify-content: space-between;
     padding-top: 50%;
     justify-items: center;
 }
 
 .strummingimg {
-    display: absolute;
+    position: absolute;
     margin-left: 8%;
     width: 100%;
     height: 100%;
 }
 
 .coverimg {
-    display: absolute;
+    position: absolute;
     margin-right: 0%;
     width: 100%;
     height: 100%;
 }
 
 .originalimg {
-    display: absolute;
+    position: absolute;
     width: 100%;
     height: 100%;
 }
@@ -84,7 +85,7 @@
 }
 
 .Strumming2023{
-    display: absolute;
+    position: absolute;
     margin-left: 13%;
     background-color: #FF8542;
     padding: 9px;
@@ -95,7 +96,7 @@
 }
 
 .Coversongs{
-    display: absolute;
+    position: absolute;
     margin-right: 13%;
     margin-left: 20.5%;
     background-color: #FF8542;
@@ -108,7 +109,7 @@
 }
 
 .Originalsongs {
-    display: absolute;
+    position: absolute;
     background-color: #FF8542;
     color: black;
     margin-left: 8%;
@@ -123,14 +124,14 @@
 .AboutMe {
     background-color: #0a0d14;
     padding-top: 100px;
-    display: flex;
+    position: flex;
     padding-left: 20px;
     height: auto;
     color: white;
 }
 
 .AboutmeWords {
-    display: absolute;
+    position: absolute;
     margin-left: 100px;
     width: 750px;
     color: white;
@@ -203,7 +204,7 @@ form {
     padding-bottom: 17px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
-    display: absolute;
+    position: absolute;
     
 }
 
