--- a/Assignment-Website/assets/styles/commonelements.css
+++ b/Assignment-Website/assets/styles/commonelements.css
@@ -7,17 +7,17 @@
 
 .logo img{
     top: 3;
-    margin-left: 40px;
+    margin-left: 3%;
     height: 45px;
     width: 45px;
-    margin-top: 30px;
+    margin-top: 2%;
     position: absolute;
 }
 
 .Home {
     font-family: sans-serif;
     font-size: 12px;
-    padding-top: 40px;
+    padding-top: 3%;
     color: white;
     position: absolute;
     margin-left: 30%;
@@ -27,7 +27,7 @@
     font-family: sans-serif;
     font-size: 12px;
     margin-left: 40%;
-    padding-top: 40px;
+    padding-top: 3%;
     color: white;
     position: absolute;
 }
@@ -36,7 +36,7 @@
     font-family: sans-serif;
     font-size: 12px;
     margin-left: 51.5%;
-    padding-top: 40px;
+    padding-top: 3%;
     color: white;
     position: absolute;
 }
@@ -45,7 +45,7 @@
     font-family: sans-serif;
     font-size: 12px;
     margin-left: 63%;
-    padding-top: 40px;
+    padding-top: 3%;
     color: white;
     position: absolute;
 }
@@ -71,7 +71,7 @@ a:hover {
 .Home1 {
     font-family: sans-serif;
     font-size: 12px;
-    padding-top: 300px;
+    padding-top: 19%;
     color: white;
     position: absolute;
     margin-left: 37%;
@@ -80,7 +80,7 @@ a:hover {
 .Portfolio1 {
     font-family: sans-serif;
     font-size: 12px;
-    padding-top: 300px;
+    padding-top: 19%;
     color: white;
     position: absolute;
     margin-left: 50%;
@@ -89,7 +89,7 @@ a:hover {
 .AboutMe1 {
     font-family: sans-serif;
     font-size: 12px;
-    padding-top: 300px;
+    padding-top: 19%;
     color: white;
     position: absolute;
     margin-left: 65%;
@@ -98,7 +98,7 @@ a:hover {
 .Contact1 {
     font-family: sans-serif;
     font-size: 12px;
-    padding-top: 300px;
+    padding-top: 19%;
     color: white;
     position: absolute;
     margin-left: 80%;
@@ -109,5 +109,5 @@ a:hover {
     position: absolute;
     width: 100%;
     height: 500px;
-    padding-top: 100px;
+    padding-top: 5%;
 }
