--- a/Assignment-Website/assets/styles/style.css
+++ b/Assignment-Website/assets/styles/style.css
@@ -12,18 +12,18 @@
 
 .latestrelease {
     position: absolute;
-    top: 200px;
+    top: 28%;
     font-size: 50px;
     color: white;
-    padding-left: 150px;
+    margin-left: 10%;
     width: 100px;
 }
 
 .listenhere {
     position: absolute;
-    top: 445px;
+    margin-top: 28%;
     font-size: 14px;
-    margin-left: 199px;
+    margin-left: 13%;
     background-color: #FF8542;
     color: black;
     padding: 9px;
@@ -43,49 +43,27 @@
 
 .queenimg img {
     width: 100%;
-    height: 705px;
+    height: auto;
 }
 
 .images {
     background-color: #0a0d14;
     display: flex;
-    justify-content: space-between;
     padding-top: 50%;
-    justify-items: center;
-}
-
-.strummingimg {
-    display: absolute;
-    margin-left: 8%;
-    width: 100%;
-    height: 100%;
-}
-
-.coverimg {
-    display: absolute;
-    margin-right: 0%;
-    width: 100%;
-    height: 100%;
-}
-
-.originalimg {
-    display: absolute;
-    width: 100%;
-    height: 100%;
+    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .labels{
     background-color: #0a0d14;
     display: flex;
-    padding-top: 15px;
+    padding-top: 2%;
     font-family: Arial, Helvetica, sans-serif;
-    justify-content: justify;
-    justify-items: center;
+    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .Strumming2023{
-    display: absolute;
-    margin-left: 13%;
     background-color: #FF8542;
     padding: 9px;
     font-size: 14px;
@@ -95,9 +73,6 @@
 }
 
 .Coversongs{
-    display: absolute;
-    margin-right: 13%;
-    margin-left: 20.5%;
     background-color: #FF8542;
     color: black;
     padding: 9px;
@@ -108,10 +83,8 @@
 }
 
 .Originalsongs {
-    display: absolute;
     background-color: #FF8542;
     color: black;
-    margin-left: 8%;
     padding: 9px;
     font-size: 14px;
     padding-top: 16px;
@@ -119,35 +92,32 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
 .AboutMe {
     background-color: #0a0d14;
-    padding-top: 100px;
+    padding-top: 7%;
     display: flex;
-    padding-left: 20px;
     height: auto;
     color: white;
 }
 
 .AboutmeWords {
-    display: absolute;
-    margin-left: 100px;
+    margin-left: 7%;
     width: 750px;
     color: white;
 }
 
 .Aboutmetitle {
-    padding-left: 180px;
+    padding-left: 26%;
     font-size: 25px;
-    padding-top: 80px;
+    padding-top: 9%;
     font-family: arial;
 }
 
 .Aboutmepara {
     width: 520px;
     font-size: 35px;
-    padding-top: 20px;
-    padding-left: 40px;
+    padding-top: 4%;
+    padding-left: 6%;
     text-align: justify;
     line-height: 1.4;
 }
@@ -161,8 +131,8 @@
     text-align: center;
     width: 205px ;
     font-size: 15px;
-    margin-left: 140px;
-    margin-top: 30px;
+    margin-left: 29%;
+    margin-top: 7%;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -173,12 +143,12 @@
 
 .subwords {
     padding-left: 28%;
-    padding-top: 100px;
+    padding-top: 10%;
     color: white;
 }
 
 .box {
-    margin-left: 300px;
+    margin-left: 20%;
     margin-top: 30px;
     input[type="text"] {
         padding: 10px; /* Set padding for better appearance */
@@ -194,7 +164,7 @@ form {
 }
 
 .Submit {
-    margin-left: 400px;
+    margin-left: 130%;
     margin-top: 30px;
     width: fit-content;
     padding-left: 13px;
