--- a/Assignment-Website/assets/styles/aboutmestyle.css
+++ b/Assignment-Website/assets/styles/aboutmestyle.css
@@ -9,23 +9,23 @@
 }
 
 .aboutme {
-    display: absolute;
-    padding-top: 200px;
+    padding-top: 10%;
     background-color: #0a0d14;
 }
 
 .MeettheArtist {
     color: white;
-    margin-left: 550px;
+    text-align: center;
     font-size: 30px;
 }
 
 .about {
     color: white;
-    padding-left: 200px;
-    padding-right: 200px;
-    padding-top: 30px;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-top: 5%;
     padding-bottom: 100px;
     font-size: 30px;
     text-align: justify;
+    text-align: center;
 }
